Corrected style prop in video component and updated overflow settings 2nd attempt

--- a/app/globals.css
+++ b/app/globals.css
@@ -168,6 +168,6 @@ font-weight: bold;
 }
 
 video {
-  overflow: clip;  
+  overflow: hidden;  
   object-fit: cover; 
 }
